entity_macros/tests/ui/derive/ent/unexpected-ent-attr.stderr
error: Unknown field: `something` at other
 --> $DIR/unexpected-ent-attr.rs:4:1
  |
4 | struct TestEnt {
  | ^^^^^^
